--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "expo": "~53.0.11",
     "expo-status-bar": "~2.2.3",
+    "lucide-react-native": "^0.514.0",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-native": "0.79.3",
+    "react-native-feather": "^1.1.2",
     "react-native-reanimated": "^3.16.2",
     "react-native-safe-area-context": "^5.4.1",
     "tailwindcss-react-native": "^1.7.10"
